Fixing bold bullets

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <li>Makes annotation process more objective and easier as compared to asking annotators to provide reference
           summaries directly or ratings or scores which becomes very difficult for long videos</li>
       </ul>
-      <li>Concepts</li>
+      <li><b>Concepts</b></li>
       <ul>
         <li>Carefully selected based on the type of video</li>
         <li>Organized in <b>categories</b> rather than a flat list</li>
@@ -189,7 +189,7 @@
           summary will not be pleasing. The notion of 'mega-events' allows for modeling <b>continuity</b>.(Figure 5)
         </li>
       </ul>
-      <li>Protocol</li>
+      <li><b>Protocol</b></li>
       <ul>
         <li>13 professional annotators</li>
         <li>Audio turned off</li>
