--- a/index.html
+++ b/index.html
@@ -130,25 +130,25 @@
         shown below.
         <div class="center-container">
 
-          <iframe src="https://drive.google.com/file/d/1e6QUZvHdZw44Y0oH73h1b2sBdhbYSXFb/preview" width="320"
-            height="240" title="soccer_18"></iframe>
+          <div class="resize"><iframe src="https://drive.google.com/file/d/1e6QUZvHdZw44Y0oH73h1b2sBdhbYSXFb/preview" width="320"
+            height="240" title="soccer_18"></iframe></div>
 
-          <iframe src="https://drive.google.com/file/d/1jeqsFEG5msnTWozAXuemHcF_n1mUP0og/preview" width="320"
-            height="240" title="friends_1"></iframe>
+            <div class="resize"><iframe src="https://drive.google.com/file/d/1jeqsFEG5msnTWozAXuemHcF_n1mUP0og/preview" width="320"
+            height="240" title="friends_1"></iframe></div>
 
-          <iframe src="https://drive.google.com/file/d/119JDos70WFP3XEcajspPEkj2SlYLaFUS/preview" width="320"
-            height="240" title="surveillance_8"></iframe>
+            <div class="resize"><iframe src="https://drive.google.com/file/d/119JDos70WFP3XEcajspPEkj2SlYLaFUS/preview" width="320"
+            height="240" title="surveillance_8"></iframe></div>
         </div>
         <div class="center-container">
 
-          <iframe src="https://drive.google.com/file/d/1_udE6vvGKkMTIwSyBGNvsnKX40b8IraH/preview" width="320"
-            height="240" title="techtalk_4"></iframe>
+          <div class="resize"><iframe src="https://drive.google.com/file/d/1_udE6vvGKkMTIwSyBGNvsnKX40b8IraH/preview" width="320"
+            height="240" title="techtalk_4"></iframe></div>
 
-          <iframe src="https://drive.google.com/file/d/152XfRt-lIb1W7WEBfMF80p8vlqbp58jm/preview" width="320"
-            height="240" title="birthday_10"></iframe>
+            <div class="resize"><iframe src="https://drive.google.com/file/d/152XfRt-lIb1W7WEBfMF80p8vlqbp58jm/preview" width="320"
+            height="240" title="birthday_10"></iframe></div>
 
-          <iframe src="https://drive.google.com/file/d/1X4-THuMy0qxlk1a54UdaQ92Rbx47-sPf/preview" width="320"
-            height="240" title="wedding_5"></iframe>
+            <div class="resize"><iframe src="https://drive.google.com/file/d/1X4-THuMy0qxlk1a54UdaQ92Rbx47-sPf/preview" width="320"
+            height="240" title="wedding_5"></iframe></div>
         </div>
   </div>
   <p class="center-container"><b>Figure 1: Clockwise from the top left : soccer_18, friends_1, surveillance_8,
