--- a/index.html
+++ b/index.html
@@ -263,15 +263,15 @@
     ground truth present in VISIOCITY. For example, maximizing a particular scoring function would yield a summary rich in that particular charcateristic. However, it may fall-short on other characteristics (Figure 5). Hence <b>different weighted combinations of measures (each modeling
       certain characteristic like diversity or continuity or importance) are maximized to arrive at optimal ground truth summaries</b>. We show that these summaries are at par with human summaries (Figure 6, 7).
 
-      <div class="center-container">
+      <div class="row center-container">
 
-          <iframe src="https://drive.google.com/file/d/1QwdzSWyYY_9YTMQ4nR8aGnZQTaRbaXy2/preview" width="320" height="240"></iframe>
+          <div class="resize"><iframe src="https://drive.google.com/file/d/1QwdzSWyYY_9YTMQ4nR8aGnZQTaRbaXy2/preview" width="320" height="240"></iframe></div>
   
-          <iframe src="https://drive.google.com/file/d/1q38TT30EtDyqotuKujQapXj1GN5sSbmz/preview" width="320" height="240"></iframe>
+          <div class="resize"><iframe src="https://drive.google.com/file/d/1q38TT30EtDyqotuKujQapXj1GN5sSbmz/preview" width="320" height="240"></iframe></div>
       </div>
       <p class="center-container"><b>Figure 5: Automatic ground truth summary f soccer_18 produced by - (left) maximizing only importance score, (right) maximizing only mega-event continuity score</b></p>
 
-    <div class="center-container">
+    <div class="row center-container">
 
         <iframe src="https://drive.google.com/file/d/19-UJRHxPg3hANrXC0-pADqlfwl9ZLGB-/preview" width="320" height="240"></iframe></iframe>
 
