Final Mobile version

--- a/index.html
+++ b/index.html
@@ -273,25 +273,25 @@
 
     <div class="row center-container">
 
-        <iframe src="https://drive.google.com/file/d/19-UJRHxPg3hANrXC0-pADqlfwl9ZLGB-/preview" width="320" height="240"></iframe></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/19-UJRHxPg3hANrXC0-pADqlfwl9ZLGB-/preview" width="300" height="225"></iframe></div>
 
-        <iframe src="https://drive.google.com/file/d/1IOAxSRW0eUIuYQDXzIBDV6VJrEQWA8Pc/preview" width="320" height="240"></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1IOAxSRW0eUIuYQDXzIBDV6VJrEQWA8Pc/preview" width="300" height="225"></iframe></div>
 
-        <iframe src="https://drive.google.com/file/d/1PK7JPxRfKIknrRhUk55O97SpVe6_qZeZ/preview" width="320" height="240"></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1PK7JPxRfKIknrRhUk55O97SpVe6_qZeZ/preview" width="300" height="225"></iframe></div>
 
-        <iframe src="https://drive.google.com/file/d/1EvqQ2HWJtC4K75V2cDMHRd2pYgXM0gU9/preview" width="320" height="240"></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1EvqQ2HWJtC4K75V2cDMHRd2pYgXM0gU9/preview" width="300" height="225"></iframe></div>
       
     </div>
     <p class="center-container"><b>Figure 6: Some human summaries for a 23 mins friends video (friends_5)</b></p>
 
-    <div class="center-container">
-        <iframe src="https://drive.google.com/file/d/1PC5-NvBrscn3-ZISfATTQ7GZ_SSy2ds7/preview" width="320" height="240"></iframe>
+    <div class="center-container row">
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1PC5-NvBrscn3-ZISfATTQ7GZ_SSy2ds7/preview" width="300" height="225"></iframe></div>
 
-        <iframe src="https://drive.google.com/file/d/1ITqt8DMhRqmOe7alaieZumMuE3Ol_lnN/preview" width="320" height="240"></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1ITqt8DMhRqmOe7alaieZumMuE3Ol_lnN/preview" width="300" height="225"></iframe></div>
 
-        <iframe src="https://drive.google.com/file/d/1Ya3S3t2ut-hlfM4UA7Zpp_Nfqd5XppKF/preview" width="320" height="240"></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1Ya3S3t2ut-hlfM4UA7Zpp_Nfqd5XppKF/preview" width="300" height="225"></iframe></div>
 
-        <iframe src="https://drive.google.com/file/d/1rLaFawVSa9kcZG5jhQWF_ewU1w1mxjaD/preview" width="320" height="240"></iframe>
+        <div class="quartercolumn resize"><iframe src="https://drive.google.com/file/d/1rLaFawVSa9kcZG5jhQWF_ewU1w1mxjaD/preview" width="300" height="225"></iframe></div>
       
     </div>
     <p class="center-container"><b>Figure 7: Some automatically generated reference summaries for same video</b>
