--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="nav-item nav-link active" href="#eval">Evaluation</a>
           <a class="nav-item nav-link active" href="#downloads">Downloads</a>
           <a class="nav-item nav-link active" href="#benchmark">Benchmark</a>
-          <a class="nav-item nav-link active" href="#cite">Cite</a>
+          <!--a class="nav-item nav-link active" href="#cite">Cite</a-->
         </div>
       </div>
   </nav>
@@ -436,7 +436,7 @@
   </div>
 
 
-  <div id="cite" class="container">
+  <!--div id="cite" class="container">
     <h2 class="page-header">Cite</h2>
     If you use VISIOCITY or refer to it, please cite the following paper:
     <div class="code">
@@ -456,7 +456,7 @@
     <br>
     <b>For any communiction regarding VISIOCITY, please contact</b>: Vishal Kaushal [vkaushal at cse dot iitb dot ac dot
     in]
-  </div>
+  </div-->
 
   <footer class="footer">
     <div class="container">
