Added dynamic leaderboard

--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
     <div class="img-with-text"><img src="./assets/results.png" />
       <p class="center-container"><b>Figure 11: Results using mixture model on VISIOCITY</b></p>
     </div>
+    <iframe src="https://competitions.codalab.org/competitions/leaderboard_widget/28349/" style="height: 500px; width: 100%; border: none;"></iframe>
   </div>
 
 
