--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="nav-item nav-link active" href="#eval">Evaluation</a>
           <a class="nav-item nav-link active" href="#downloads">Downloads</a>
           <a class="nav-item nav-link active" href="#benchmark">Benchmark</a>
-          <!--a class="nav-item nav-link active" href="#cite">Cite</a-->
+          <a class="nav-item nav-link active" href="#cite">License</a>
         </div>
       </div>
   </nav>
@@ -470,6 +470,29 @@
     <b>For any communiction regarding VISIOCITY, please contact</b>: Vishal Kaushal [vkaushal at cse dot iitb dot ac dot
     in]
   </div-->
+
+  <div id="cite" class="container">
+    <h2 class="page-header">License</h2>
+    The videos were partially downloaded from YouTube and some may be subject to copyright. We don't own the copyright of those videos and only provide them for non-commercial research purposes only.
+The annotation data can be used freely for research purposes. If you use VISIOCITY or refer to it, please cite the following paper:
+    <!--div class="code">
+      <pre>
+      <code>
+        @inproceedings{
+          kaushal2020realistic, 
+          title={Realistic Video Summarization through VISIOCITY: A New Benchmark and Evaluation Framework}, 
+          author={Kaushal, Vishal and Kothawade, Suraj and Iyer, Rishabh and Ramakrishnan, Ganesh}, 
+          booktitle={Proceedings of the 2nd International Workshop on AI for Smart TV Content Production, Access and Delivery}, 
+          pages={37--44}, 
+          year={2020}
+        }
+      </code>
+    </pre>
+    </div-->
+    <br>
+    <b>For any communiction regarding VISIOCITY, please contact</b>: Vishal Kaushal [vkaushal at cse dot iitb dot ac dot
+    in]
+  </div>
 
   <footer class="footer">
     <div class="container">
