Adding link to paper

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       particular type (Table 1), VISIOCITY is a <b>diverse collection of 67 long videos spanning across six different
         categories with dense concept annotations</b> (Table 2). Due to its rich annotations, it supports different
       flavors of
-      video summarization and other vision problems like captioning as well.
+      video summarization and other vision problems like captioning as well. More details about VISIOCITY can be found in the paper <a href="https://arxiv.org/abs/2101.10514">here</a>.
       <br> <br>
       <div class="row">
         <div class="righthalfcolumn img-with-text resize"><img src="assets/comparison.png"
@@ -475,20 +475,20 @@
     <h2 class="page-header">License</h2>
     The videos were partially downloaded from YouTube and some may be subject to copyright. We don't own the copyright of those videos and only provide them for non-commercial research purposes only.
 The annotation data can be used freely for research purposes. If you use VISIOCITY or refer to it, please cite the following paper:
-    <!--div class="code">
+    <div class="code">
       <pre>
       <code>
-        @inproceedings{
-          kaushal2020realistic, 
-          title={Realistic Video Summarization through VISIOCITY: A New Benchmark and Evaluation Framework}, 
-          author={Kaushal, Vishal and Kothawade, Suraj and Iyer, Rishabh and Ramakrishnan, Ganesh}, 
-          booktitle={Proceedings of the 2nd International Workshop on AI for Smart TV Content Production, Access and Delivery}, 
-          pages={37--44}, 
-          year={2020}
-        }
+        @misc{kaushal2021good,
+      title={How Good is a Video Summary? A New Benchmarking Dataset and Evaluation Framework Towards Realistic Video Summarization}, 
+      author={Vishal Kaushal and Suraj Kothawade and Anshul Tomar and Rishabh Iyer and Ganesh Ramakrishnan},
+      year={2021},
+      eprint={2101.10514},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
       </code>
     </pre>
-    </div-->
+    </div>
     <br>
     <b>For any communiction regarding VISIOCITY, please contact</b>: Vishal Kaushal [vkaushal at cse dot iitb dot ac dot
     in]
