--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h1 class="page-title center-container">VISIOCITY</h1>
     </div>
     <p class="lead center-container">A New
-      Benchmark and Evaluation Framework</p>
+      Dataset and Evaluation Framework</p>
   </div>
 
 
@@ -365,24 +365,6 @@
 
   <div id="downloads" class="container">
     <h2 class="page-header">Downloads</h2>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeSssECV_FRuVhXgZT28T1UftAezMdqkMLhXDAv15d3H6-Wjw/viewform?embedded=true" width="640" height="811" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-<!-- 
-    <h3>Videos</h3>
-    All videos of VISIOCITY can be downloaded from <a
-      href="https://drive.google.com/drive/folders/1vgTWSNNEFI3aHUyIUqA_jc1OZhVCZV3V?usp=sharing">here</a>
-    <br>
-    <br>
-    <h3>Annotations</h3>
-    The JSON files of all annotations for all videos and all categories can be downloaded from <a
-      href="https://drive.google.com/drive/folders/1d_j3icjw29R1umyHAT4Fj-JP2imy-WCt?usp=sharing">here</a>
-    <br>
-    <br>
-
-    <h3>Human Summaries</h3>
-    The human summary JSON files can be downloaded from <a
-      href="https://drive.google.com/drive/folders/1jixMBbI3T-NIT8GATt3rPvdXMg8Ge2mD?usp=sharing">here</a> -->
-    <br>
-    <br>
     <h3>Code</h3>
     The code can be downloaded from <a href="https://github.com/visiocity/visiocity.github.io">this git repository</a>
     <br>
@@ -432,6 +414,24 @@
         JSONs</li>
       <li><code>randomSummaryGenerator.py</code>: code to generate random summaries</li>
     </ul>
+    <h3>Other Assets</h3>
+    The links to download the videos, annotations and human summaries will be available after filling the following Google form.
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeSssECV_FRuVhXgZT28T1UftAezMdqkMLhXDAv15d3H6-Wjw/viewform?embedded=true" width="640" height="811" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<!-- 
+    <h3>Videos</h3>
+    All videos of VISIOCITY can be downloaded from <a
+      href="https://drive.google.com/drive/folders/1vgTWSNNEFI3aHUyIUqA_jc1OZhVCZV3V?usp=sharing">here</a>
+    <br>
+    <br>
+    <h3>Annotations</h3>
+    The JSON files of all annotations for all videos and all categories can be downloaded from <a
+      href="https://drive.google.com/drive/folders/1d_j3icjw29R1umyHAT4Fj-JP2imy-WCt?usp=sharing">here</a>
+    <br>
+    <br>
+
+    <h3>Human Summaries</h3>
+    The human summary JSON files can be downloaded from <a
+      href="https://drive.google.com/drive/folders/1jixMBbI3T-NIT8GATt3rPvdXMg8Ge2mD?usp=sharing">here</a> -->
   </div>
 
   <div id="benchmark" class="container">
