Modified the form

--- a/index.html
+++ b/index.html
@@ -414,9 +414,14 @@
         JSONs</li>
       <li><code>randomSummaryGenerator.py</code>: code to generate random summaries</li>
     </ul>
-    <h3>Other Assets</h3>
+    <h3>Videos, Annotations and Summaries</h3>
     The links to download the videos, annotations and human summaries will be available after filling the following Google form.
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeSssECV_FRuVhXgZT28T1UftAezMdqkMLhXDAv15d3H6-Wjw/viewform?embedded=true" width="640" height="811" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfy_6xoqwYItZlwdlANnk_jCRN_G1JqlOwbv4TW0MJn-Gr-nw/viewform?embedded=true" width="640" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+    <!--iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeSssECV_FRuVhXgZT28T1UftAezMdqkMLhXDAv15d3H6-Wjw/viewform?embedded=true" width="640" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe-->
+
+    
+    
 <!-- 
     <h3>Videos</h3>
     All videos of VISIOCITY can be downloaded from <a
