--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       particular type (Table 1), VISIOCITY is a <b>diverse collection of 67 long videos spanning across six different
         categories with dense concept annotations</b> (Table 2). Due to its rich annotations, it supports different
       flavors of
-      video summarization and other vision problems like captioning as well. More details about VISIOCITY can be found in the paper <a href="https://arxiv.org/abs/2101.10514">here</a>.
+      video summarization and other vision problems like event localization or action recognition as well. More details about VISIOCITY can be found in the paper <a href="https://arxiv.org/abs/2101.10514">here</a>.
       <br> <br>
       <div class="row">
         <div class="righthalfcolumn img-with-text resize"><img src="assets/comparison.png"
@@ -106,8 +106,8 @@
 
   <div id="videos" class="container">
     <h2 class="page-header">Videos</h2>
-    <p> VISIOCITY contains publicly available Soccer, Friends, Techtalk, Birthday and Wedding videos downloaded from the
-      internet.
+    <p> VISIOCITY is a diverse collection of 67 long videos spanning across six different domains: TV shows (\emph{Friends}) , 
+      sports (soccer), surveillance, education (tech-talks), birthday videos and wedding videos.
       <ul>
         <li><b>TV shows</b> contains videos from a popular TV series Friends. They are typically more aesthetic in
           nature
@@ -126,7 +126,7 @@
         <li>In personal videos category, VISIOCITY has
           <b>birthday</b> and <b>wedding</b> videos. These videos are typically long and unedited.</li>
       </ul>
-      <p> A sample video from
+      <p> A sample from
         each category is
         shown below.
         <div class="row center-container">
@@ -134,8 +134,12 @@
           <div class="resize"><iframe src="https://drive.google.com/file/d/1e6QUZvHdZw44Y0oH73h1b2sBdhbYSXFb/preview" width="320"
             height="240" title="soccer_18"></iframe></div>
 
-            <div class="resize"><iframe src="https://drive.google.com/file/d/1jeqsFEG5msnTWozAXuemHcF_n1mUP0og/preview" width="320"
-            height="240" title="friends_1"></iframe></div>
+            <!--div class="resize"><iframe src="https://drive.google.com/file/d/1jeqsFEG5msnTWozAXuemHcF_n1mUP0og/preview" width="320"
+            height="240" title="friends_1"></iframe></div-->
+          
+            <div class="righthalfcolumn img-with-text resize"><img src="assets/friends.png"
+            alt="VISIOCITY compared with other datasets" width=700 /></div>
+            
 
             <div class="resize"><iframe src="https://drive.google.com/file/d/119JDos70WFP3XEcajspPEkj2SlYLaFUS/preview" width="320"
             height="240" title="surveillance_8"></iframe></div>
