--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h1 class="page-title center-container">VISIOCITY</h1>
     </div>
     <p class="lead center-container">A New
-      Dataset and Evaluation Framework</p>
+      Dataset and Evaluation Framework for Realistic Video Summarization</p>
   </div>
 
 
@@ -106,7 +106,7 @@
 
   <div id="videos" class="container">
     <h2 class="page-header">Videos</h2>
-    <p> VISIOCITY is a diverse collection of 67 long videos spanning across six different domains: TV shows (\emph{Friends}) , 
+    <p> VISIOCITY is a diverse collection of 67 long videos spanning across six different domains: TV shows (Friends) , 
       sports (soccer), surveillance, education (tech-talks), birthday videos and wedding videos.
       <ul>
         <li><b>TV shows</b> contains videos from a popular TV series Friends. They are typically more aesthetic in
@@ -138,7 +138,7 @@
             height="240" title="friends_1"></iframe></div-->
           
             <div class="righthalfcolumn img-with-text resize"><img src="assets/friends.png"
-            alt="VISIOCITY compared with other datasets" width=700 /></div>
+            alt="Image from Friens" width=320 height=240 /></div>
             
 
             <div class="resize"><iframe src="https://drive.google.com/file/d/119JDos70WFP3XEcajspPEkj2SlYLaFUS/preview" width="320"
