--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <!--div class="resize"><iframe src="https://drive.google.com/file/d/1jeqsFEG5msnTWozAXuemHcF_n1mUP0og/preview" width="320"
             height="240" title="friends_1"></iframe></div-->
           
-            <div class="righthalfcolumn img-with-text resize"><img src="assets/friends.png"
-            alt="Image from Friens" width=320 height=240 /></div>
+            <div class="resize"><img src="assets/friends.png"
+            alt="Image from Friens" width="320" height="240" /></div>
             
 
             <div class="resize"><iframe src="https://drive.google.com/file/d/119JDos70WFP3XEcajspPEkj2SlYLaFUS/preview" width="320"
