--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
       <div class="row">
       </div>
   </div>
+    
+  <div class="resize"><img src="assets/visiocity3.png"
+            alt="VISIOCITY at a glance" /></div>
 
   <div id="videos" class="container">
     <h2 class="page-header">Videos</h2>
