--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </div>
     
   <div class="resize"><img src="assets/visiocity3.png"
-            alt="VISIOCITY at a glance" /></div>
+            alt="VISIOCITY at a glance" width="960"/></div>
 
   <div id="videos" class="container">
     <h2 class="page-header">Videos</h2>
