--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
       </div>
   </div>
     
+  <div id="glance" class="container">
   <div class="resize"><img src="assets/visiocity3.png"
             alt="VISIOCITY at a glance" width="960"/></div>
+    </div>
 
   <div id="videos" class="container">
     <h2 class="page-header">Videos</h2>
