--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
   </div>
     
   <div id="glance" class="container">
-  <div class="resize"><img src="assets/visiocity3.png"
-            alt="VISIOCITY at a glance" width="960"/></div>
+    <div class="img-with-text"><img class="center-container resize" src="assets/visiocity4.png" alt="VISIOCITY at a Glance"
+        width=900 />
+      <p class="center-container"><b>VISIOCITY Framework At a Glance</b></p>
+    </div>
     </div>
 
   <div id="videos" class="container">
